--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,18 +1,16 @@
 <div *ngIf="options" style="position: relative;" #wrapper>
     <h1>{{options.header}}</h1>
 
-    <div [style.transform]="'translate(' + this.x + ', ' + this.y + ')'" class="MovieInfo"
-        [hidden]="activeMovie === null">
+    <div [style.transform]="'translate(' + this.x + ', ' + this.y + ')'" class="MovieInfo" [hidden]="activeMovie === null">
         <h2>{{activeMovie?.name}}</h2>
         <hr>
-        <h3>(Breif movie information here)</h3>
+        <h3 class="movie-overview">{{activeMovie?.overview}}</h3>
     </div>
     <div class="carousel-wrap">
         <owl-carousel-o [options]="customOptions">
             <ng-container *ngFor="let movie of movies" style="width:200px">
                 <ng-template carouselSlide [id]="movie.name" [width]="200">
-                    <app-movie *ngIf="movie.name.includes(options.query)" [movie]="movie"
-                        (onHoverChanged)="this.setActiveMovie($event)"></app-movie>
+                    <app-movie *ngIf="movie.name.includes(options.query)" [movie]="movie" (onHoverChanged)="this.setActiveMovie($event)"></app-movie>
                 </ng-template>
             </ng-container>
 
