--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -5,16 +5,19 @@
 body {
     margin: auto;
     padding: auto;
+    font-family: 'Roboto', sans-serif;
 }
 
 div {
     background-color: whitesmoke;
+    font-family: 'Roboto', sans-serif;
     margin: auto;
     padding: auto;
 }
 
 h2 {
     color: #ff7d00;
+    font-family: 'Roboto', sans-serif;
     margin: 2rem;
     padding: 1rem;
 }
