--- a/src/app/movie-page/movie-page.component.css
+++ b/src/app/movie-page/movie-page.component.css
@@ -45,6 +45,7 @@ h1 {
     border-radius: 10px 10px 0px 0px;
     padding-left: 1rem;
     margin-top: 0rem;
+    font-family: 'Roboto', sans-serif;
     margin-bottom: 0rem;
     margin-left: 1.97rem;
     margin-right: 1.97rem;
