--- a/src/app/review/review.component.css
+++ b/src/app/review/review.component.css
@@ -6,6 +6,7 @@ body {
     background-color: white;
     border-bottom: 2px solid black;
     margin: auto;
+    font-family: 'Roboto', sans-serif;
     padding: auto 1rem auto;
     font-size: 18px;
 }
@@ -25,6 +26,7 @@ div.inner-info {
     background-color: white;
     padding-left: 1rem;
     margin: auto;
+    font-family: 'Roboto', sans-serif;
     padding-bottom: 1rem;
 }
 
@@ -51,16 +53,19 @@ div.title {
 h2 {
     font-size: 30px;
     margin: auto;
+    font-family: 'Roboto', sans-serif;
 }
 
 .Sentiment {
     font-weight: bold;
     font-size: 20px;
     padding-left: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 .user {
     font-size: 15px;
     font-style: italic;
     padding-left: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
