--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 body.main {
     background-color: white;
 }
@@ -12,6 +13,7 @@ footer {
     border-radius: 0px 0px 20px 20px;
     background-color: #1d3557;
     font-size: 20px;
+    font-family: 'Roboto', sans-serif;
     color: aliceblue;
 }
 
