Titles on home, search, and movie page

--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -49,3 +49,10 @@ h3.movie-overview {
     /* number of lines to show */
     -webkit-box-orient: vertical;
 }
+
+h4.movie-title-card {
+    font-size: 8;
+    font-family: 'Roboto', sans-serif;
+    overflow: hidden;
+    padding: 10px;
+}
