--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -8,24 +8,34 @@
 
 <body>
     <div class="analysis-display">
-        <div class="movie-cover">
-            <span *ngIf="movie">
-                <div *ngIf="movie.poster_url else titleDisplay">
-                    <img src={{movie.poster_url}}>
-                </div>
-                <ng-template #titleDisplay>{{movie.name}}</ng-template>
-            </span>
-        </div>
+        <div class="poster-title-wrapper">
+            <div>
+                <h2 class="movie-name">
+                    {{movie?.name}}
+                </h2>
+            </div>
+            <div class="movie-cover">
+                <span *ngIf="movie">
+                    <div *ngIf="movie.poster_url else titleDisplay">
+                        <img src={{movie.poster_url}}>
+                    </div>
+                    <ng-template #titleDisplay>{{movie.name}}</ng-template>
+                </span>
+            </div>
 
+        </div>
         <!--Conditional display of components based on routing ID.-->
-        <div>
-            <app-combined-display *ngIf="display === 0"></app-combined-display>
-        </div>
-        <div>
-            <app-sentiment-display *ngIf="display === 1"></app-sentiment-display>
-        </div>
-        <div>
-            <app-word-frequency-display *ngIf="display === 2"></app-word-frequency-display>
+
+        <div class="combined-display-wrapper">
+            <div>
+                <app-combined-display *ngIf="display === 0"></app-combined-display>
+            </div>
+            <div>
+                <app-sentiment-display *ngIf="display === 1"></app-sentiment-display>
+            </div>
+            <div>
+                <app-word-frequency-display *ngIf="display === 2"></app-word-frequency-display>
+            </div>
         </div>
     </div>
     <h1>List of Reviews</h1>
