--- a/src/app/combined-display/combined-display.component.html
+++ b/src/app/combined-display/combined-display.component.html
@@ -3,17 +3,14 @@
         <h1>Movie Metadata Section: TBD</h1>
         <p>This would have information about the funny movie and stuff.</p>
     </div>
-
-    <div class="pie-and-words">
-        <div class="pie">
-            <h1>Positivity Analysis</h1>
-
-            <app-pie-chart></app-pie-chart>
-        </div>
-        <div class="words">
-            <h1>Frequently Used Words</h1>
-
-            <app-word-cloud></app-word-cloud>
-        </div>
+    <div class="pie">
+        <h1>Positivity Analysis</h1>
+        <app-pie-chart>
+        </app-pie-chart>
+    </div>
+    <div class="words">
+        <h1>Frequently Used Words</h1>
+        <app-word-cloud>
+        </app-word-cloud>
     </div>
 </div>
