--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -1,4 +1,4 @@
-<div class="pie-chart">
+<div id="pie-chart">
     <div echarts [options]="pieOptions" (chartClick)="onClick($event)">
 
     </div>
