--- a/src/app/word-cloud/word-cloud.component.html
+++ b/src/app/word-cloud/word-cloud.component.html
@@ -1,5 +1,5 @@
-<div class="word-cloud">
-    <angular-d3-cloud [data]="data" font="Roboto" [rotate]="0" [autoFill]="true" (wordClick)="onWordClick($event)">
+<div id="word-cloud">
+    <angular-d3-cloud [data]="data" [width]="300" [height]="200" [padding]="5" font="Roboto" [rotate]="0" [autoFill]="true" (wordClick)="onWordClick($event)">
 
     </angular-d3-cloud>
 </div>
