--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -4,36 +4,47 @@
     <title>Movie | ReviewSense</title>
 
 </head>
+<html>
 
-<div class="analysis-display">
-    <div class="poster-title-wrapper">
-        <div>
-            <h2 class="movie-name">
-                {{movie?.name}}
-            </h2>
+<body>
+    <div class="analysis-display">
+        <div class="poster-title-wrapper">
+            <div>
+                <h2 class="movie-name">
+                    {{movie?.name}}
+                </h2>
+            </div>
+            <div class="movie-cover">
+                <span *ngIf="movie">
+                    <div *ngIf="movie.poster_url else titleDisplay">
+                        <img src={{movie.poster_url}}>
+                    </div>
+                    <ng-template #titleDisplay>{{movie.name}}</ng-template>
+                </span>
+            </div>
+
         </div>
-        <div class="movie-cover">
-            <span *ngIf="movie">
-                <div *ngIf="movie.poster_url else titleDisplay">
-                    <img src={{movie.poster_url}}>
-                </div>
-                <ng-template #titleDisplay>{{movie.name}}</ng-template>
-            </span>
+        <!--Conditional display of components based on routing ID.-->
+
+        <div class="combined-display-wrapper">
+            <div>
+                <app-combined-display *ngIf="display === 0"></app-combined-display>
+            </div>
+            <div>
+                <app-sentiment-display *ngIf="display === 1"></app-sentiment-display>
+            </div>
+            <div>
+                <app-word-frequency-display *ngIf="display === 2"></app-word-frequency-display>
+            </div>
         </div>
+    </div>
+    <h1>List of Reviews</h1>
+    <div class="reviews-display">
+        <app-review-list [options]="movieOptions"></app-review-list>
+    </div>
+    <div class="empty">
 
     </div>
-    <!--Conditional display of components based on routing ID.-->
+</body>
 
-    <div class="combined-display-wrapper">
-
-        <app-combined-display></app-combined-display>
-
-    </div>
-</div>
-<h1>List of Reviews</h1>
-<div class="reviews-display">
-    <app-review-list [options]="movieOptions"></app-review-list>
-</div>
-<div class="empty">
-
-</div>
+</html>
