Pie Chart now functional

--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -1,5 +1,5 @@
 <div id="pie-chart">
-    <div echarts [options]="pieOptions" (chartClick)="onClick($event)">
+    <div echarts [options]="pieOptions" [merge]="mergeOptions" (chartClick)="onClick($event)">
 
     </div>
 </div>
