--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -7,17 +7,31 @@
         <h3 class="movie-overview">{{activeMovie?.overview}}</h3>
     </div>
 
-    <div class="carousel-wrap">
-        <owl-carousel-o [options]="customOptions">
-            <ng-container *ngFor="let movie of movies" style="width:200px">
-                <ng-template carouselSlide [id]="movie.name" [width]="200">
-                    <app-movie [movie]="movie" (onHoverChanged)="this.setActiveMovie($event)"></app-movie>
-                    <div>
-                        <h4 class="movie-title-card">{{movie.name}}</h4>
-                    </div>
-                </ng-template>
-            </ng-container>
+    <div  *ngIf="options.location!='Search'; else searchBlock" class="display-flip">
 
-        </owl-carousel-o>
+        <div class="carousel-wrap">
+            <owl-carousel-o [options]="customOptions">
+                <ng-container *ngFor="let movie of movies" style="width:200px">
+                    <ng-template carouselSlide [id]="movie.name" [width]="200">
+                        <app-movie [movie]="movie" (onHoverChanged)="this.setActiveMovie($event)"></app-movie>
+                        <div>
+                        <h4 class="movie-title-card">{{movie.name}}</h4>
+                        </div>
+                    </ng-template>
+                </ng-container>
+
+            </owl-carousel-o>
+        </div>
     </div>
+
+    <ng-template #searchBlock>
+        <div class="movie-list" >
+            <div *ngFor="let movie of movies" style="width:200px">
+                <app-movie [movie]="movie"></app-movie>
+                <div>
+                <h4 class="movie-title-card">{{movie.name}}</h4>
+                </div>
+            </div>
+        </div>
+    </ng-template>
 </div>
