--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -2,7 +2,7 @@ button {
     width: 10rem;
     height: 15rem;
     border: 2px;
-    padding: 10px;
+    padding: 8px 5px;
     font-family: "Trebuchet MS";
     font-size: 1.5rem;
     font-weight: bolder;
@@ -23,6 +23,7 @@ button.active {
 img {
     width: 9rem;
     height: 14rem;
+    
     padding: auto;
     margin: auto;
     transition: 0.3s;
