Metadata now displays on MoviePageComponent

--- a/src/app/combined-display/combined-display.component.html
+++ b/src/app/combined-display/combined-display.component.html
@@ -1,7 +1,8 @@
 <div class="combined-display">
     <div class="metadata">
-        <h1>Movie Metadata Section: TBD</h1>
-        <p>This would have information about the funny movie and stuff.</p>
+        
+        <h1>{{movie!.name}}</h1>
+        <h2>{{movie!.overview}}</h2>
     </div>
 
     <div class="pie-and-words">
