--- a/src/app/movie-page/movie-page.component.css
+++ b/src/app/movie-page/movie-page.component.css
@@ -29,7 +29,7 @@ body {
     height: 22rem;
     border: 2px;
     margin: 2rem;
-    font-family: 'Trebuchet MS';
+    font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
     font-weight: bolder;
     box-shadow: .3rem .3rem .5rem grey;
