--- a/src/app/search-results-page/search-results-page.component.css
+++ b/src/app/search-results-page/search-results-page.component.css
@@ -3,3 +3,20 @@ body {
     margin: auto;
     background-color: whitesmoke;
 }
+
+button {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    padding: auto;
+    cursor: pointer;
+    height: 3rem;
+    width: 10rem;
+    margin: 1rem;
+    border-radius: 10px;
+}
+
+div.navagation-buttons {
+    height: 5rem;
+    text-align: center;
+}
