Pie Chart and Word Cloud now display differently on specialized pages

--- a/src/app/sentiment-display/sentiment-display.component.html
+++ b/src/app/sentiment-display/sentiment-display.component.html
@@ -1,8 +1,8 @@
 <div class="sentiment-display">
     <h1>Out of all {{sentiment}} reviews...</h1>
 
-    <app-word-cloud>
-
+    <app-word-cloud [sentiment]=sentiment>
+    
     </app-word-cloud>
 
     <h2>Most Common Keywords Found</h2>
