--- a/src/app/word-frequency-display/word-frequency-display.component.html
+++ b/src/app/word-frequency-display/word-frequency-display.component.html
@@ -1,7 +1,7 @@
 <div class="frequency-display">
     <h1>Out of all reviews containing "{{word}}"...</h1>
 
-    <app-pie-chart></app-pie-chart>
+    <app-pie-chart [keyword]=word></app-pie-chart>
 
     <h2>Positivity of Reviews containing "{{word}}"</h2>
 </div>
