--- a/src/app/sentiment-display/sentiment-display.component.html
+++ b/src/app/sentiment-display/sentiment-display.component.html
@@ -1,9 +1,10 @@
 <div class="sentiment-display">
     <h1>Out of all {{sentiment}} reviews...</h1>
 
-    <app-word-cloud [sentiment]=sentiment>
-    
-    </app-word-cloud>
+    <div class="word-cloud-wrapper">
+        <app-word-cloud [sentiment]=sentiment>
 
+        </app-word-cloud>
+    </div>
     <h2>Most Common Keywords Found</h2>
 </div>
