Reviews are now paged. Initial search page checks size before deciding to display navigation buttons.

--- a/src/app/movie-page/movie-page.component.css
+++ b/src/app/movie-page/movie-page.component.css
@@ -65,3 +65,19 @@ h2.movie-name {
 div.combined-display-wrapper {
     margin-left: 5rem;
 }
+button {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    padding: auto;
+    cursor: pointer;
+    height: 3rem;
+    width: 10rem;
+    margin: 1rem;
+    border-radius: 10px;
+}
+
+div.navagation-buttons {
+    height: 5rem;
+    text-align: center;
+}
