--- a/src/app/search-results-page/search-results-page.component.html
+++ b/src/app/search-results-page/search-results-page.component.html
@@ -11,7 +11,9 @@
     <div class="navagation-buttons">
         <div *ngIf="searchOptions.page=='0'; else multiBlock">
 
-            <button name="nextPage" (click)="nextPage()">Next Page</button>
+            <div *ngIf="getSize() > 19;">
+                <button name="nextPage" (click)="nextPage()">Next Page</button>
+            </div>
         </div>
 
         <ng-template #multiBlock>
